Added resume pdf links

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
             alt="Card image cap">
           <div class="card-body">
             <p class="card-text">
-              A fun quiz on Javascript, made with Javascript!
+              A fun quiz on Javascript, made with Javascript! Complete with a timer and highscores page!
             </p>
           </div>
         </div>
@@ -94,7 +94,7 @@
     <div class="row portfolio-cards-row mb-2">
 
       <div class="col-lg-6 mb-5">
-          
+
           <a href="https://tianwes.github.io/JQuery-API-Work-Day-Planner/" target="_blank" class="card-links">
         <div class="card h-100" style="width: 18rem;">
           <img class="card-img-top img-thumbnail"
@@ -103,7 +103,7 @@
           <div class="card-body">
             <p class="card-text">
               An "up-to-date" planner that uses local-storage and Luxon dates & time 
-              to help you keep on track during your work day!
+              to help you keep on schedule during your work day!
             </p>
           </div>
         </div>
@@ -115,12 +115,10 @@
           <a href="#" class="card-links">
         <div class="card h-100" style="width: 18rem;">
           <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/tin-dog-portfolio.jpg"
+            src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <p class="card-text">
-                A Bootstrap-heavy mock-up of Tinder for Dogs. (A tutorial used from Udemy, The App Brewery)
-            </p>
+            <p class="card-text">to a screen near you!</p>
           </div>
         </div>
     </a>
@@ -143,6 +141,21 @@
         </div>
         </a>
       </div>
+
+      <div class="col-lg-6 mb-5">
+
+        <a href="#" class="card-links">
+        <div class="card h-100" style="width: 18rem;">
+          <img class="card-img-top img-thumbnail"
+            src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
+            alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">to a screen near you!</p>
+          </div>
+        </div>
+        </a>
+      </div>
+
     </div>
 
   </div>
