--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,10 @@
     <div class="row mt-5 pt-3 ps-3">
       <div class="col-12">
         <h1>Contact Me</h1>
+        <!-- Would like to add tooltips on hover/ may need to move class?? -->
         <a href="https://www.linkedin.com/in/tiffany-weaver-4b23a51b8/" target="_blank" class="fa fa-linkedin"></a>
         <a href="https://twitter.com/TiffanyndBeyond" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://github.com/Tianwes" target="_blank" class="fa fa-github"></a>
 
         <hr>
       </div>
