--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
     <div class="row about-me-row mt-5 pt-3 ps-3">
       <div class="col-12">
-        <h1>About Me</h1>
+        <h1 id="aboutMe-h1">About Me</h1>
+        <a class="resH2" href="Assets/Resume-TiffanyWeaver.pdf" target="_blank"><h2>My Resume</h2></a>
         <hr>
       </div>
 
@@ -57,17 +58,21 @@
       <div class="row">
         <div class="col-12">
           <img src="Assets/Portfolio-images/About-me-portfolio-pic..jpg"
-            class="float-left img-thumbnail me-3" alt="Cat in a scarf">
-          <p class="about-me-paragraph mt-3">Hey, my name is Tiffany Weaver and I'm an aspiring full-stack web developer.   
-              I have a passion for designing and creating as well as being structured and organized. 
-              I'm currently expanding my knowledge and feeding my curiousity with UCF'S Coding Bootcamp.  I am pretty fluent
-              with HTML and CSS with Bootstrap not far behind but am ever-evolving.
+            class="float-left img-thumbnail me-3" alt="image of Tiffany">
+          <p class="about-me-paragraph mt-3">Hello! My name is Tiffany Weaver and I'm a full-stack web developer.   
+              I have a passion for coding, design and actualizing ideas. 
+              I have earned my web-developement certificate from the University of Central Florida's Coding Bootcamp. 
+              I'm fluent in the front-end as well as Javascript, JQuery, Node.js, AJAX, and web APIs.
             </p>
               <br>
 
               <p>When I'm not composing with code I can be found petting the nearest cat, gaming, crafting, biking, or geocaching.  
               In all things, I like to find a balance...except when it comes to cats and web developing...
           </p>
+          <br>
+
+          <a class="downloadRes" href="Assets/Resume-TiffanyWeaver.pdf" target="_blank">Find my resume here</a>
+            
         </div>
       </div>
 
