Added email and phone with icons

--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,13 @@
         <a href="https://www.linkedin.com/in/tiffany-weaver-4b23a51b8/" target="_blank" class="fa fa-linkedin"></a>
         <a href="https://twitter.com/TiffanyndBeyond" target="_blank" class="fa fa-twitter"></a>
         <a href="https://github.com/Tianwes" target="_blank" class="fa fa-github"></a>
-
-        <hr>
+         <hr>
       </div>
-
+      <div class="row">
+      <h6 class="col-5 fa fa-envelope">  tianweavers@gmail.com</h6>
+      <br>
+      <h6 class="col-5 fa fa-phone">  478-954-6970</h6>
+    </div>
       <!-- Form -->
       <form>
         <div class="form-group mb-3">
