Updated README with new screenshots, lisence, styled links in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,8 @@
               I worked in a four-person team to build this application using APIs, JQuery, and Materialize. 
               This app returns recipes and nutrition facts for desired ingredients.
             </p>
+            <br>
+            <a class="gitLink" href="https://tkuebler12.github.io/ProjectOne/">Github</a>
           </div>
         </div>
     </a>
@@ -83,7 +85,9 @@
           <div class="card-body">
             <p class="card-text">
               A fun quiz on Javascript, made with Javascript! Complete with a timer and highscores page!
-            </p>
+            </p>  
+              <br>
+            <a class="gitLink" href="https://github.com/Tianwes/Code_Quiz_using_Web_APIs">Github</a>
           </div>
         </div>
      </a>
@@ -105,6 +109,8 @@
               An "up-to-date" planner that uses local-storage and Luxon dates & time 
               to help you keep on schedule during your work day!
             </p>
+              <br>
+              <a class="gitLink" href="https://github.com/Tianwes/JQuery-API-Work-Day-Planner">Github</a>
           </div>
         </div>
     </a>
@@ -118,7 +124,11 @@
             src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <p class="card-text">to a screen near you!</p>
+            <p class="card-text">
+              to a screen near you!
+            </p>  
+              <br>
+            <a class="gitLink" href="#">Github</a>
           </div>
         </div>
     </a>
@@ -136,8 +146,12 @@
             src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <p class="card-text">to a screen near you!</p>
-          </div>
+            <p class="card-text">
+              to a screen near you!
+              </p>
+              <br>
+              <a class="gitLink" href="#">Github</a>
+            </div>
         </div>
         </a>
       </div>
@@ -150,7 +164,11 @@
             src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <p class="card-text">to a screen near you!</p>
+            <p class="card-text">
+              to a screen near you!
+              </p>  
+              <br>
+              <a class="gitLink" href="#">Github</a>
           </div>
         </div>
         </a>
