--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
               This app returns recipes and nutrition facts for desired ingredients.
             </p>
             <br>
-            <a class="gitLink" href="https://tkuebler12.github.io/ProjectOne/">Github</a>
+            <a class="gitLink" href="https://github.com/tkuebler12/ProjectOne" target="_blank">Github</a>
           </div>
         </div>
     </a>
@@ -87,7 +87,7 @@
               A fun quiz on Javascript, made with Javascript! Complete with a timer and highscores page!
             </p>  
               <br>
-            <a class="gitLink" href="https://github.com/Tianwes/Code_Quiz_using_Web_APIs">Github</a>
+            <a class="gitLink" href="https://github.com/Tianwes/Code_Quiz_using_Web_APIs" target="_blank">Github</a>
           </div>
         </div>
      </a>
@@ -110,7 +110,7 @@
               to help you keep on schedule during your work day!
             </p>
               <br>
-              <a class="gitLink" href="https://github.com/Tianwes/JQuery-API-Work-Day-Planner">Github</a>
+              <a class="gitLink" href="https://github.com/Tianwes/JQuery-API-Work-Day-Planner" target="_blank">Github</a>
           </div>
         </div>
     </a>
