Added two projects and corresponding links

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
       <!-- Image and Info -->
       <div class="row">
         <div class="col-12">
-          <img src="Assets/Portfolio-images/About-me-portfolio-pic..jpg"
+          <img src="Assets/Portfolio-images/About-me-portfolio-pic.jpg"
             class="float-left img-thumbnail me-3" alt="image of Tiffany">
           <p class="about-me-paragraph mt-3">Hello! My name is Tiffany Weaver and I'm a full-stack web developer.   
               I have a passion for coding, design and actualizing ideas. 
-              I have earned my web-developement certificate from the University of Central Florida's Coding Bootcamp. 
-              I'm fluent in the front-end as well as Javascript, JQuery, Node.js, AJAX, and web APIs.
+              I have earned my web-developement certification from the University of Central Florida's Coding Bootcamp. 
+              I'm fluent in the front-end with HTML, CSS, Javascript, JQuery, Bootstrap and Materialize. With the back-end 
+              I've worked with Node.js, Express.js, Sequelize and MySQL, Mongo and Mongoose, AJAX, and web APIs.
             </p>
               <br>
 
