--- a/portfolio.html
+++ b/portfolio.html
@@ -64,8 +64,9 @@
             src="Assets/Portfolio-images/ProjectOneStill.jpg"
             alt="Card image cap">
           <div class="card-body">
+            <h3 class="projectTitle">Ready S.E.T.T. Eat!</h3>
             <p class="card-text">
-              I worked in a four-person team to build this application using APIs, JQuery, and Materialize. 
+              I worked on a team to build this application using APIs, JQuery, and Materialize. 
               This app returns recipes and nutrition facts for desired ingredients.
             </p>
             <br>
@@ -83,6 +84,7 @@
             src="Assets/Portfolio-images/JavaScriptQuizStill.jpg"
             alt="Card image cap">
           <div class="card-body">
+            <h3 class="projectTitle">Javascript Quiz</h3>
             <p class="card-text">
               A fun quiz on Javascript, made with Javascript! Complete with a timer and highscores page!
             </p>  
@@ -105,6 +107,7 @@
             src="Assets/Portfolio-images/JavascriptWorkPlanner.jpg"
             alt="Card image cap">
           <div class="card-body">
+            <h3 class="projectTitle">Work-Day Planner</h3>
             <p class="card-text">
               An "up-to-date" planner that uses local-storage and Luxon dates & time 
               to help you keep on schedule during your work day!
@@ -118,17 +121,20 @@
 
       <div class="col-lg-6 mb-5">
 
-          <a href="#" class="card-links">
+          <a href="https://radiant-island-35045.herokuapp.com/login" target="_blank" class="card-links">
         <div class="card h-100" style="width: 18rem;">
-          <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
+          <img class="card-img-top img-thumbnail DnDimage"
+            src="Assets/Portfolio-images/DnDImage.jpg"
             alt="Card image cap">
           <div class="card-body">
+            <h3 class="projectTitle">Dungeons and Dragons Spell Book</h3>
             <p class="card-text">
-              to a screen near you!
+              A "customizable" Dungeons & Dragons Spell book, add Wizard's spells from the great spell book to your own book.
+              This was a group project, my role astehetic of our site and the functionality of the book using Turn.js. 
+              This app connects to a database of spells.
             </p>  
               <br>
-            <a class="gitLink" href="#">Github</a>
+            <a class="gitLink" href="https://github.com/Nickpodski/My_DND_SpellBook" target="_blank">Github</a>
           </div>
         </div>
     </a>
@@ -140,17 +146,18 @@
 
       <div class="col-lg-6 mb-5">
 
-        <a href="#" class="card-links">
+        <a href="https://mysterious-chamber-46750.herokuapp.com/" target="_blank" class="card-links">
         <div class="card h-100" style="width: 18rem;">
           <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
+            src="Assets/Portfolio-images/note-taker.jpg"
             alt="Card image cap">
           <div class="card-body">
+            <h3 class="projectTitle">Note Taker</h3>
             <p class="card-text">
-              to a screen near you!
+              This is a note-taking app using Express.
               </p>
               <br>
-              <a class="gitLink" href="#">Github</a>
+              <a class="gitLink" href="https://github.com/Tianwes/Express.js-Note-Taker" target="_blank">Github</a>
             </div>
         </div>
         </a>
@@ -164,6 +171,7 @@
             src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
             alt="Card image cap">
           <div class="card-body">
+            <h3 class="projectTitle">Coming Soon</h3>
             <p class="card-text">
               to a screen near you!
               </p>  
