Updated with proj. 3

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,23 +2,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <!-- Fonts Link -->
-  <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Raleway:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Raleway:wght@500&display=swap" rel="stylesheet" />
   <!-- Bootstrap package links -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
   <!-- CSS Styling link -->
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css" />
 </head>
 
 <body>
-
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -46,153 +45,223 @@
 
   <!-- Container - My Portfolio -->
   <div class="container ps-5 pe-5" id="portfolio-container">
-
     <div class="row portfolio-heading mt-5 pt-3 ps-3">
       <div class="col-12">
         <h1>My Portfolio</h1>
-        <hr>
+        <hr />
       </div>
     </div>
 
     <!-- 1st row of cards (lg & up) -->
     <div class="row portfolio-cards-row mb-2">
-
+      <!-- Reel Junkie -->
       <div class="col-lg-6 mb-5">
-          <a href="https://tkuebler12.github.io/ProjectOne/" target="_blank" class="card-links">
-        <div class="card h-100" style="width: 18rem;">
-          <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/ProjectOneStill.jpg"
-            alt="Card image cap">
-          <div class="card-body">
-            <h3 class="projectTitle">Ready S.E.T.T. Eat!</h3>
-            <p class="card-text">
-              I worked on a team to build this application using APIs, JQuery, and Materialize. 
-              This app returns recipes and nutrition facts for desired ingredients.
-            </p>
-            <br>
-            <a class="gitLink" href="https://github.com/tkuebler12/ProjectOne" target="_blank">Github</a>
-          </div>
-        </div>
-    </a>
-      </div>
-
-      <div class="col-lg-6 mb-5">
-
-          <a href="https://tianwes.github.io/Code_Quiz_using_Web_APIs/" target="_blank" class="card-links">
-        <div class="card h-100" style="width: 18rem;">
-          <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/JavaScriptQuizStill.jpg"
-            alt="Card image cap">
-          <div class="card-body">
-            <h3 class="projectTitle">Javascript Quiz</h3>
-            <p class="card-text">
-              A fun quiz on Javascript, made with Javascript! Complete with a timer and highscores page!
-            </p>  
-              <br>
-            <a class="gitLink" href="https://github.com/Tianwes/Code_Quiz_using_Web_APIs" target="_blank">Github</a>
-          </div>
-        </div>
-     </a>
-      </div>
-    </div>
-    
-    <!-- Second row of cards -->
-    <div class="row portfolio-cards-row mb-2">
-
-      <div class="col-lg-6 mb-5">
-
-          <a href="https://tianwes.github.io/JQuery-API-Work-Day-Planner/" target="_blank" class="card-links">
-        <div class="card h-100" style="width: 18rem;">
-          <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/JavascriptWorkPlanner.jpg"
-            alt="Card image cap">
-          <div class="card-body">
-            <h3 class="projectTitle">Work-Day Planner</h3>
-            <p class="card-text">
-              An "up-to-date" planner that uses local-storage and Luxon dates & time 
-              to help you keep on schedule during your work day!
-            </p>
-              <br>
-              <a class="gitLink" href="https://github.com/Tianwes/JQuery-API-Work-Day-Planner" target="_blank">Github</a>
-          </div>
-        </div>
-    </a>
-      </div>
-
-      <div class="col-lg-6 mb-5">
-
-          <a href="https://radiant-island-35045.herokuapp.com/login" target="_blank" class="card-links">
-        <div class="card h-100" style="width: 18rem;">
-          <img class="card-img-top img-thumbnail DnDimage"
-            src="Assets/Portfolio-images/DnDImage.jpg"
-            alt="Card image cap">
-          <div class="card-body">
-            <h3 class="projectTitle">Dungeons and Dragons Spell Book</h3>
-            <p class="card-text">
-              A "customizable" Dungeons & Dragons Spell book, add Wizard's spells from the great spell book to your own book.
-              This was a group project, my role astehetic of our site and the functionality of the book using Turn.js. 
-              This app connects to a database of spells.
-            </p>  
-              <br>
-            <a class="gitLink" href="https://github.com/Nickpodski/My_DND_SpellBook" target="_blank">Github</a>
-          </div>
-        </div>
-    </a>
-      </div>
-    </div>
-  
-    <!-- Third row of cards -->
-    <div class="row portfolio-cards-row mb-2 pb-5">
-
-      <div class="col-lg-6 mb-5">
-
-        <a href="https://mysterious-chamber-46750.herokuapp.com/" target="_blank" class="card-links">
-        <div class="card h-100" style="width: 18rem;">
-          <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/note-taker.jpg"
-            alt="Card image cap">
-          <div class="card-body">
-            <h3 class="projectTitle">Note Taker</h3>
-            <p class="card-text">
-              This is a note-taking app using Express.
+        <a href="https://gentle-castle-13144.herokuapp.com/" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/reeljunkie.jpg" alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Reel Junkie</h3>
+              <p class="card-text">
+                Lovers of movies, rejoice! You can earn badges for your movie
+                watching habits! A team project built React, React Bootstrap,
+                Node.js, MongoDB, TheMovieDB API, and more!
               </p>
-              <br>
+              <br />
+              <a class="gitLink" href="https://github.com/Nickpodski/reel_junkie" target="_blank">Github</a>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-lg-6 mb-5">
+        <!-- DnD Spellbook -->
+        <a href="https://radiant-island-35045.herokuapp.com/login" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail DnDimage" src="Assets/Portfolio-images/DnDImage.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Dungeons and Dragons Spell Book</h3>
+              <p class="card-text">
+                A "customizable" Dungeons & Dragons Spell book, add Wizard's
+                spells from the great spell book to your own book. This was a
+                group project, my role astehetic of our site and the
+                functionality of the book using Turn.js. This app connects to
+                a database of spells.
+              </p>
+              <br />
+              <a class="gitLink" href="https://github.com/Nickpodski/My_DND_SpellBook" target="_blank">Github</a>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- 2nd row of cards (lg & up) -->
+    <div class="row portfolio-cards-row mb-2">
+      <div class="col-lg-6 mb-5">
+        <!-- Work Planner -->
+        <a href="https://tianwes.github.io/JQuery-API-Work-Day-Planner/" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/JavascriptWorkPlanner.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Work-Day Planner</h3>
+              <p class="card-text">
+                An "up-to-date" planner that uses local-storage and Luxon
+                dates & time to help you keep on schedule during your work
+                day!
+              </p>
+              <br />
+              <a class="gitLink" href="https://github.com/Tianwes/JQuery-API-Work-Day-Planner"
+                target="_blank">Github</a>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-lg-6 mb-5">
+        <!-- JS Quiz -->
+        <a href="https://tianwes.github.io/Code_Quiz_using_Web_APIs/" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/JavaScriptQuizStill.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Javascript Quiz</h3>
+              <p class="card-text">
+                A fun quiz on Javascript, made with Javascript! Complete with
+                a timer and highscores page!
+              </p>
+              <br />
+              <a class="gitLink" href="https://github.com/Tianwes/Code_Quiz_using_Web_APIs" target="_blank">Github</a>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- Third row of cards -->
+    <div class="row portfolio-cards-row mb-2">
+      <!-- Ready S.E.T.T. Eat! -->
+      <div class="col-lg-6 mb-5">
+        <a href="https://tkuebler12.github.io/ProjectOne/" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/ProjectOneStill.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Ready S.E.T.T. Eat!</h3>
+              <p class="card-text">
+                I worked on a team to build this application using APIs,
+                JQuery, and Materialize. This app returns recipes and
+                nutrition facts for desired ingredients.
+              </p>
+              <br />
+              <a class="gitLink" href="https://github.com/tkuebler12/ProjectOne" target="_blank">Github</a>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-lg-6 mb-5">
+        <!-- Workout Tracker -->
+        <a href="https://sleepy-caverns-65739.herokuapp.com/" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail workoutTrackerImg" src="Assets/Portfolio-images/workoutTracker.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Workout Tracker</h3>
+              <p class="card-text">
+                Users can log and track their resistance and cardio workout
+                stats.
+              </p>
+              <br />
+              <a class="gitLink" href="https://github.com/Tianwes/workout-tracker" target="_blank">Github</a>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- Fourth row -->
+    <div class="row portfolio-cards-row mb-2">
+      <!-- Budget Tracker  -->
+      <div class="col-lg-6 mb-5">
+        <a href="https://hidden-mesa-11817.herokuapp.com/" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/budget-tracker.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Budget Tracker</h3>
+              <p class="card-text">
+                Easily track your budget on or off-line with this downloadable app.
+              </p>
+              <br />
+              <a class="gitLink" href="https://github.com/Tianwes/online-offline-budget-tracker" target="_blank">Github</a>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-lg-6 mb-5">
+       <a href="https://mysterious-chamber-46750.herokuapp.com/" target="_blank" class="card-links">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/note-taker.jpg" alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Note Taker</h3>
+              <p class="card-text">
+                This is a note-taking app using Express.
+              </p>
+              <br />
               <a class="gitLink" href="https://github.com/Tianwes/Express.js-Note-Taker" target="_blank">Github</a>
             </div>
-        </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- fifth Row of Cards -->
+    <div class="row portfolio-cards-row mb-2 pb-5">
+      <!-- Note Taker -->
+      <div class="col-lg-6 mb-5">
+         <!-- Coming Soon -->
+         <a href="#" class="card-links" target="_blank">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Coming Soon</h3>
+              <p class="card-text">to a screen near you!</p>
+              <br />
+              <a class="gitLink" href="#" target="_blank">Github</a>
+            </div>
+          </div>
         </a>
       </div>
 
       <div class="col-lg-6 mb-5">
-
-        <a href="#" class="card-links">
-        <div class="card h-100" style="width: 18rem;">
-          <img class="card-img-top img-thumbnail"
-            src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
-            alt="Card image cap">
-          <div class="card-body">
-            <h3 class="projectTitle">Coming Soon</h3>
-            <p class="card-text">
-              to a screen near you!
-              </p>  
-              <br>
-              <a class="gitLink" href="#">Github</a>
+        <!-- Coming Soon -->
+        <a href="#" class="card-links" target="_blank">
+          <div class="card h-100">
+            <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/coming-soon-portfolio.jpg"
+              alt="Card image cap" />
+            <div class="card-body">
+              <h3 class="projectTitle">Coming Soon</h3>
+              <p class="card-text">to a screen near you!</p>
+              <br />
+              <a class="gitLink" href="#" target="_blank">Github</a>
+            </div>
           </div>
-        </div>
         </a>
       </div>
-
     </div>
-
   </div>
-  
+
   <!-- footer -->
   <div class="row mt-5">
     <div class="footer sticky-bottom py-2">
       <h6>&#169; Copyright 2020</h6>
     </div>
   </div>
-
 </body>
 
 </html>
+
