--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="row about-me-row mt-5 pt-3 ps-3">
       <div class="col-12">
         <h1 id="aboutMe-h1">About Me</h1>
-        <a class="resH2" href="Assets/Resume-TiffanyWeaver.pdf" target="_blank"><h2>My Resume</h2></a>
+        <a class="resH2" href="Assets/Tiffany Weaver - Resume.pdf" target="_blank"><h2>My Resume</h2></a>
         <hr>
       </div>
 
@@ -72,7 +72,7 @@
           </p>
           <br>
 
-          <a class="downloadRes" href="Assets/Resume-TiffanyWeaver.pdf" target="_blank">Find my resume here</a>
+          <a class="downloadRes" href="Assets/Tiffany Weaver - Resume.pdf" target="_blank">Find my resume here</a>
             
         </div>
       </div>
