Updated Github, deployed, portfolio links

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
     <div class="row portfolio-cards-row mb-2">
       <div class="col-lg-6 mb-5">
         <!-- Work Planner -->
-        <a href="https://tianwes.github.io/JQuery-API-Work-Day-Planner/" target="_blank" class="card-links">
+        <a href="https://tianwes.github.io/Work-Day-Planner/" target="_blank" class="card-links">
           <div class="card h-100">
             <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/JavascriptWorkPlanner.jpg"
               alt="Card image cap" />
@@ -112,7 +112,7 @@
                 day!
               </p>
               <br />
-              <a class="gitLink" href="https://github.com/Tianwes/JQuery-API-Work-Day-Planner"
+              <a class="gitLink" href="https://github.com/Tianwes/Work-Day-Planner"
                 target="_blank">Github</a>
             </div>
           </div>
@@ -121,7 +121,7 @@
 
       <div class="col-lg-6 mb-5">
         <!-- JS Quiz -->
-        <a href="https://tianwes.github.io/Code_Quiz_using_Web_APIs/" target="_blank" class="card-links">
+        <a href="https://tianwes.github.io/Timed-JavaScript-Quiz/" target="_blank" class="card-links">
           <div class="card h-100">
             <img class="card-img-top img-thumbnail" src="Assets/Portfolio-images/JavaScriptQuizStill.jpg"
               alt="Card image cap" />
@@ -132,7 +132,7 @@
                 a timer and highscores page!
               </p>
               <br />
-              <a class="gitLink" href="https://github.com/Tianwes/Code_Quiz_using_Web_APIs" target="_blank">Github</a>
+              <a class="gitLink" href="https://github.com/Tianwes/Timed-JavaScript-Quiz" target="_blank">Github</a>
             </div>
           </div>
         </a>
